force-app/main/default/objects/Profile__c/Profile__c.object-meta.xml
<CustomObject>
    <label>Profile</label>
    <nameField>
        <label>Naam van Profile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>