force-app/main/default/objects/Profile__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <length>30</length>
    <type>Text</type>
</CustomField>